Found css bug where footer padding was overlapping with the graphs and blocking the ability to view points and swipe

--- a/src/index.css
+++ b/src/index.css
@@ -138,7 +138,6 @@ footer {
     position: fixed;
     left: 0;
     bottom: 0px;
-    padding-top: 200px;
     width: 100%;
     color: black;
     text-align: center;
